# PBR

./: .clang-format  CMakeLists.txt  LICENSE.md  README.md  build.sh
cmake/macros/: Public.cmake
docs/: Doxyfile.in
hdPbr/: CMakeLists.txt  api.h  debugCodes.cpp  debugCodes.h  mesh.cpp  mesh.h  plugInfo.json  renderBuffer.cpp  renderBuffer.h  renderDelegate.cpp  renderDelegate.h  renderParam.cpp  renderParam.h  renderPass.cpp  renderPass.h  rendererPlugin.cpp  rendererPlugin.h
hdPbrt/: CMakeLists.txt  api.h  debugCodes.cpp  debugCodes.h  mesh.cpp  mesh.h  plugInfo.json  renderDelegate.cpp  renderDelegate.h  renderParam.cpp  renderParam.h  renderPass.cpp  renderPass.h  rendererPlugin.cpp  rendererPlugin.h
pbr/: CMakeLists.txt  api.h  generateCode.py  platform.h  primitive.h
pbr/codeGen/: README.md  arrayTypes.py  base.py  constants.py  cppLanguage.py  scalarTypes.py  tools.py  utils.py  vectorTypes.py
pbr/codeGenTemplates/: aggregateIncludes.cpp  arrayType.h  vectorType.h
pbr/codeGenTemplates/functions/: abs.h  ceil.h  coordinateSystem.h  crossProduct.h  distance.h  distanceSquared.h  dotProduct.h  faceForward.h  floor.h  length.h  lengthSquared.h  lerp.h  max.h  min.h  normalise.h
pbr/codeGenTemplates/types/: arrayType.h  vectorType.h
pbr/description/: scene.h
pbr/function/: CMakeLists.txt  abs.h  allFunctions.cpp  boundsDiagonal.h  boundsExpand.h  boundsIntersection.h  boundsMaxExtent.h  boundsOffset.h  boundsOverlap.h  boundsSurfaceArea.h  boundsUnion.h  boundsVolume.h  ceil.h  coordinateSystem.h  crossProduct.h  debug.h  degreesToRadians.h  distance.h  distanceSquared.h  dotProduct.cpp  dotProduct.h  faceForward.h  floor.h  isIdentity.h  isIdentityMatrix.h  length.h  lengthSquared.h  lerp.h  lookAt.h  matrixIsIdentity.h  matrixProduct.h  matrixSetIdentity.h  matrixSetRotate.h  matrixSetRotateX.h  matrixSetRotateY.h  matrixSetRotateZ.h  matrixSetScale.h  matrixSetTranslate.h  matrixTranspose.h  max.h  (+18 more)
pbr/function/tests/: CMakeLists.txt  testFunctions.cpp  testFunctionsGeometry.cpp  testFunctionsMath.cpp
pbr/functions/: CMakeLists.txt  abs.h  ceil.h  coordinateSystem.h  crossProduct.h  distance.h  distanceSquared.h  dotProduct.cpp  dotProduct.h  faceForward.h  floor.h  length.h  lengthSquared.h  lerp.h  max.h  min.h  normalise.h
pbr/functions/tests/: CMakeLists.txt  testDotProduct.cpp  testFunctionsMath.cpp
pbr/platform/: CMakeLists.txt  export.cpp  export.h  os.h
pbr/template/: README.md
pbr/template/function/: abs.h  boundsDiagonal.h  boundsExpand.h  boundsIntersection.h  boundsMaxExtent.h  boundsOffset.h  boundsOverlap.h  boundsSurfaceArea.h  boundsUnion.h  boundsVolume.h  ceil.h  coordinateSystem.h  crossProduct.h  degreesToRadians.h  distance.h  distanceSquared.h  dotProduct.h  faceForward.h  floor.h  isIdentity.h  isIdentityMatrix.h  length.h  lengthSquared.h  lerp.h  lookAt.h  matrixIsIdentity.h  matrixProduct.h  matrixSetIdentity.h  matrixSetRotate.h  matrixSetRotateX.h  matrixSetRotateY.h  matrixSetRotateZ.h  matrixSetScale.h  matrixSetTranslate.h  matrixTranspose.h  max.h  min.h  normalise.h  pointInsideBounds.h  pointInsideBoundsExclusive.h  (+14 more)
pbr/template/type/: arrayType.h  compositeType.h  vectorType.h
pbr/tool/: CMakeLists.txt  README.md  almost.h  assert.h  callStack.cpp  callStack.h  profile.cpp  profile.h
pbr/tool/tests/: CMakeLists.txt  testAlmost.cpp  testAssert.cpp  testLog.cpp  testProfile.cpp
pbr/tools/: CMakeLists.txt  README.md  almost.h  assert.cpp  assert.h  callStack.cpp  log.cpp  log.h  profile.cpp  profile.h
pbr/tools/tests/: CMakeLists.txt  testAlmost.cpp  testAssert.cpp  testLog.cpp  testProfile.cpp
pbr/type/: CMakeLists.txt  allTypes.cpp  bounds2f.h  bounds2i.h  bounds3f.h  bounds3i.h  floatArray.h  intArray.h  mat3f.h  mat3fArray.h  mat4f.h  mat4fArray.h  vec2f.h  vec2fArray.h  vec2i.h  vec2iArray.h  vec2iRange.h  vec3f.h  vec3fArray.h  vec3i.h  vec3iArray.h  vec4f.h  vec4fArray.h  vec4i.h  vec4iArray.h  vectorTypes.cpp
pbr/type/tests/: CMakeLists.txt  testType.cpp
pbr/types/: codeGenTypes.py  double2.h  double3.h  double4.h  float2.h  float3.h  float4.h  floatArray.h  int2.h  int3.h  int4.h  intArray.h  mat33Float.h  mat33Int.h  mat3Float.h  mat3FloatArray.h  mat3f.h  mat3fArray.h  mat44Float.h  mat44Int.h  mat4Float.h  mat4FloatArray.h  mat4f.h  mat4fArray.h  matrix3f.h  matrix3fArray.h  matrix3i.h  matrix4f.h  matrix4fArray.h  matrix4i.h  vec2Float.h  vec2FloatArray.h  vec2Int.h  vec2IntArray.h  vec2f.h  vec2fArray.h  vec2i.h  vec2iArray.h  vec3Float.h  vec3FloatArray.h  (+27 more)
pbrt/: CMakeLists.txt
src/: CMakeLists.txt
src/pbr/: pbr.h
src/pbr/base/: CMakeLists.txt  assert.h  export.h  log.h  os.h  stacktrace.cpp  stacktrace.h
src/pbr/cameras/: projectiveCamera.cpp  projectiveCamera.h
src/pbr/core/: CMakeLists.txt  camera.cpp  camera.h  cameraSample.h  film.cpp  film.h  filmTile.h  geometricPrimitive.cpp  geometricPrimitive.h  imageBuffer.h  integrator.h  interaction.h  material.h  primitive.h  ray.h  renderSettings.h  sampler.h  samplerIntegrator.cpp  samplerIntegrator.h  scene.cpp  scene.h  shape.cpp  shape.h  surfaceInteraction.h  transform.h  writeImage.cpp  writeImage.h
src/pbr/core/tests/: testRay.cpp  testTransform.cpp  testWriteImage.cpp
src/pbr/shapes/: CMakeLists.txt  sphere.cpp  sphere.h
src/pbr/shapes/tests/: testSphere.cpp
src/pbr/utils/: CMakeLists.txt  assert.h  diagnostic.h  export.h  fileSystem.cpp  fileSystem.h  log.h  os.h  stacktrace.cpp  stacktrace.h
src/pbrProgram/: CMakeLists.txt  main.cpp
src/pbrWriteImage/: CMakeLists.txt  main.cpp
src/pbrt/: main.cpp
